refactor: simplify generated sdk client layer
