# internal/generated/models/api_elasticity_host_issue.go
@@ -1,50 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag/jsonutils"
-)
-
-// APIElasticityHostIssue api elasticity host issue
-//
-// swagger:model api.elasticityHostIssue
-type APIElasticityHostIssue struct {
-
-	// code
-	Code string `json:"code,omitempty"`
-
-	// message
-	Message string `json:"message,omitempty"`
-}
-
-// Validate validates this api elasticity host issue
-func (m *APIElasticityHostIssue) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this api elasticity host issue based on context it is used
-func (m *APIElasticityHostIssue) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *APIElasticityHostIssue) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return jsonutils.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *APIElasticityHostIssue) UnmarshalBinary(b []byte) error {
-	var res APIElasticityHostIssue
-	if err := jsonutils.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
