# internal/generated/models/api_elasticity_observed_box_runtime.go
@@ -1,180 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-import (
-	"context"
-	stderrors "errors"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag/jsonutils"
-	"github.com/go-openapi/swag/typeutils"
-)
-
-// APIElasticityObservedBoxRuntime api elasticity observed box runtime
-//
-// swagger:model api.elasticityObservedBoxRuntime
-type APIElasticityObservedBoxRuntime struct {
-
-	// active execs
-	ActiveExecs int64 `json:"active_execs,omitempty"`
-
-	// active transfers
-	ActiveTransfers int64 `json:"active_transfers,omitempty"`
-
-	// box id
-	BoxID string `json:"box_id,omitempty"`
-
-	// cpu millis
-	CPUMillis int64 `json:"cpu_millis,omitempty"`
-
-	// memory bytes
-	MemoryBytes int64 `json:"memory_bytes,omitempty"`
-
-	// network mode
-	NetworkMode APIBoxNetworkMode `json:"network_mode,omitempty"`
-
-	// security mode
-	SecurityMode APIBoxSecurityMode `json:"security_mode,omitempty"`
-}
-
-// Validate validates this api elasticity observed box runtime
-func (m *APIElasticityObservedBoxRuntime) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateNetworkMode(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateSecurityMode(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *APIElasticityObservedBoxRuntime) validateNetworkMode(formats strfmt.Registry) error {
-	if typeutils.IsZero(m.NetworkMode) { // not required
-		return nil
-	}
-
-	if err := m.NetworkMode.Validate(formats); err != nil {
-		ve := new(errors.Validation)
-		if stderrors.As(err, &ve) {
-			return ve.ValidateName("network_mode")
-		}
-		ce := new(errors.CompositeError)
-		if stderrors.As(err, &ce) {
-			return ce.ValidateName("network_mode")
-		}
-
-		return err
-	}
-
-	return nil
-}
-
-func (m *APIElasticityObservedBoxRuntime) validateSecurityMode(formats strfmt.Registry) error {
-	if typeutils.IsZero(m.SecurityMode) { // not required
-		return nil
-	}
-
-	if err := m.SecurityMode.Validate(formats); err != nil {
-		ve := new(errors.Validation)
-		if stderrors.As(err, &ve) {
-			return ve.ValidateName("security_mode")
-		}
-		ce := new(errors.CompositeError)
-		if stderrors.As(err, &ce) {
-			return ce.ValidateName("security_mode")
-		}
-
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validate this api elasticity observed box runtime based on the context it is used
-func (m *APIElasticityObservedBoxRuntime) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateNetworkMode(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateSecurityMode(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *APIElasticityObservedBoxRuntime) contextValidateNetworkMode(ctx context.Context, formats strfmt.Registry) error {
-
-	if typeutils.IsZero(m.NetworkMode) { // not required
-		return nil
-	}
-
-	if err := m.NetworkMode.ContextValidate(ctx, formats); err != nil {
-		ve := new(errors.Validation)
-		if stderrors.As(err, &ve) {
-			return ve.ValidateName("network_mode")
-		}
-		ce := new(errors.CompositeError)
-		if stderrors.As(err, &ce) {
-			return ce.ValidateName("network_mode")
-		}
-
-		return err
-	}
-
-	return nil
-}
-
-func (m *APIElasticityObservedBoxRuntime) contextValidateSecurityMode(ctx context.Context, formats strfmt.Registry) error {
-
-	if typeutils.IsZero(m.SecurityMode) { // not required
-		return nil
-	}
-
-	if err := m.SecurityMode.ContextValidate(ctx, formats); err != nil {
-		ve := new(errors.Validation)
-		if stderrors.As(err, &ve) {
-			return ve.ValidateName("security_mode")
-		}
-		ce := new(errors.CompositeError)
-		if stderrors.As(err, &ce) {
-			return ce.ValidateName("security_mode")
-		}
-
-		return err
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *APIElasticityObservedBoxRuntime) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return jsonutils.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *APIElasticityObservedBoxRuntime) UnmarshalBinary(b []byte) error {
-	var res APIElasticityObservedBoxRuntime
-	if err := jsonutils.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
